[gd_scene load_steps=18 format=3 uid="uid://cunpab1ac2q5a"]

[ext_resource type="Script" path="res://scenes/encounters/muscleguy.gd" id="1_lc2v6"]
[ext_resource type="Script" path="res://scripts/healthbar.gd" id="2_mnv27"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="3_c0xy3"]
[ext_resource type="Texture2D" uid="uid://1w8676jtjd00" path="res://assets/battle/enemy_sprites/lutador_batalha.png" id="3_fwivw"]
[ext_resource type="AudioStream" uid="uid://bxv8cyux61nvh" path="res://assets/sounds/hit.wav" id="4_iw5wo"]
[ext_resource type="AudioStream" uid="uid://v5g5pt1bp1s6" path="res://assets/sounds/enemy_death.wav" id="5_kr241"]
[ext_resource type="AudioStream" uid="uid://b5l6brydh16eh" path="res://assets/sounds/damage_taken_01.wav" id="6_15j8b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgtos"]
bg_color = Color(0, 0.670588, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3aa0j"]
bg_color = Color(0.803922, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qld48"]
line_spacing = 60.0
font = ExtResource("3_c0xy3")
font_size = 320
outline_size = 100
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3717"]
atlas = ExtResource("3_fwivw")
region = Rect2(0, 0, 920, 1200)

[sub_resource type="SpriteFrames" id="SpriteFrames_xry8i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3717")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kk0q7"]
resource_name = "damage_number"

[sub_resource type="Animation" id="Animation_kqvds"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.823529, 0.298039, 1, 1), Color(0.823529, 0.298039, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_iw5wo")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_kr241")
}],
"times": PackedFloat32Array(0.0562, 0.1)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_6ykin"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7lblk"]
resource_name = "get_hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(5.8956e-05, 2.15792e-05, 0.00306478, 1.2394e-05, 4.78872e-05),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_iw5wo")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_15j8b")
}],
"times": PackedFloat32Array(0, 0.0467)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uup1h"]
_data = {
"damage_number": SubResource("Animation_kk0q7"),
"death": SubResource("Animation_kqvds"),
"default": SubResource("Animation_6ykin"),
"get_hit": SubResource("Animation_7lblk")
}

[node name="Enemies" type="Node2D"]
position = Vector2(-112, 299)
scale = Vector2(4, 4)

[node name="Lutador" type="Node2D" parent="."]
position = Vector2(-34, -23)
script = ExtResource("1_lc2v6")

[node name="Healthbar" type="Node2D" parent="Lutador"]
visible = false
z_index = 2
script = ExtResource("2_mnv27")

[node name="Green" type="Panel" parent="Lutador/Healthbar"]
z_index = 1
offset_left = -22.0
offset_top = -24.0
offset_right = 23.0
offset_bottom = -17.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fgtos")
metadata/_edit_use_anchors_ = true

[node name="Red" type="Panel" parent="Lutador/Healthbar"]
offset_left = -22.0
offset_top = -24.0
offset_right = 23.0
offset_bottom = -17.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3aa0j")
metadata/_edit_use_anchors_ = true

[node name="DamageText" type="Label" parent="Lutador/Healthbar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -8.0
offset_right = 686.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "9545"
label_settings = SubResource("LabelSettings_qld48")
horizontal_alignment = 1

[node name="Sprite" type="AnimatedSprite2D" parent="Lutador"]
modulate = Color(0.823529, 0.298039, 1, 1)
position = Vector2(0, 33)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_xry8i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lutador"]
libraries = {
"": SubResource("AnimationLibrary_uup1h")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lutador"]

[node name="ErrorLabel" type="Label" parent="Lutador"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 16.25
offset_right = 3287.0
offset_bottom = 718.25
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "error:Tipo inv√°lido"
label_settings = SubResource("LabelSettings_qld48")
horizontal_alignment = 1

[connection signal="animation_end" from="Lutador/Healthbar" to="Lutador" method="_on_healthbar_animation_end"]
[connection signal="animation_finished" from="Lutador/AnimationPlayer" to="Lutador" method="_on_animation_player_animation_finished"]
